--- a/site/slider/index.html
+++ b/site/slider/index.html
@@ -146,7 +146,7 @@ while run:
     slider.listen(events)
     slider.draw()
 
-    output.setText(slider.getValue())
+    output.setText(str(slider.getValue()))
 
     output.draw()
 
